// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts should open & close add contact modal 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col -m-5 bg-theme-neutral-200 min-h-screen"
    data-testid="contacts"
  >
    <div
      class="flex items-center space-x-3 font-semibold p-10 text-theme-neutral-700"
      data-testid="breadcrumbs__wrapper"
    >
      <span>
         &lt;- 
      </span>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-700"
          href="/portfolio"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5"
    >
      <div
        class="bg-theme-background p-10"
      >
        <div
          class="flex items-center justify-between bg-theme-background"
        >
          <div
            class="flex flex-col items-start w-2/5"
          >
            <h1
              class="text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Contacts
            </h1>
            <div
              class="mt-2 text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Manage your frequent contacts
            </div>
          </div>
          <div
            class="w-3/5"
          >
            <div
              class="flex justify-end items-center space-x-5"
            >
              <button
                class="sc-AxjAm ddQVWI whitespace-no-wrap"
                color="primary"
                data-testid="contacts__add-contact-btn"
                type="button"
              >
                Add Contact
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 bg-theme-background p-10"
      >
        <div
          class="flex flex-col items-center justify-center"
          data-testid="contacts__banner"
        >
          <svg
            class="w-3/5 mb-8"
          >
            contacts-banner.svg
          </svg>
          <span>
            Add your most frequent contacts for fast, easy payments
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Contacts should open & close add contact modal 2`] = `
<DocumentFragment>
  <div
    class="flex flex-col -m-5 bg-theme-neutral-200 min-h-screen"
    data-testid="contacts"
  >
    <div
      class="flex items-center space-x-3 font-semibold p-10 text-theme-neutral-700"
      data-testid="breadcrumbs__wrapper"
    >
      <span>
         &lt;- 
      </span>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-700"
          href="/portfolio"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5"
    >
      <div
        class="bg-theme-background p-10"
      >
        <div
          class="flex items-center justify-between bg-theme-background"
        >
          <div
            class="flex flex-col items-start w-2/5"
          >
            <h1
              class="text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Contacts
            </h1>
            <div
              class="mt-2 text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Manage your frequent contacts
            </div>
          </div>
          <div
            class="w-3/5"
          >
            <div
              class="flex justify-end items-center space-x-5"
            >
              <button
                class="sc-AxjAm ddQVWI whitespace-no-wrap"
                color="primary"
                data-testid="contacts__add-contact-btn"
                type="button"
              >
                Add Contact
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 bg-theme-background p-10"
      >
        <div
          class="flex flex-col items-center justify-center"
          data-testid="contacts__banner"
        >
          <svg
            class="w-3/5 mb-8"
          >
            contacts-banner.svg
          </svg>
          <span>
            Add your most frequent contacts for fast, easy payments
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Contacts should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col -m-5 bg-theme-neutral-200 min-h-screen"
    data-testid="contacts"
  >
    <div
      class="flex items-center space-x-3 font-semibold p-10 text-theme-neutral-700"
      data-testid="breadcrumbs__wrapper"
    >
      <span>
         &lt;- 
      </span>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-700"
          href="/portfolio"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5"
    >
      <div
        class="bg-theme-background p-10"
      >
        <div
          class="flex items-center justify-between bg-theme-background"
        >
          <div
            class="flex flex-col items-start w-2/5"
          >
            <h1
              class="text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Contacts
            </h1>
            <div
              class="mt-2 text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Manage your frequent contacts
            </div>
          </div>
          <div
            class="w-3/5"
          >
            <div
              class="flex justify-end items-center space-x-5"
            >
              <button
                class="sc-AxjAm ddQVWI whitespace-no-wrap"
                color="primary"
                data-testid="contacts__add-contact-btn"
                type="button"
              >
                Add Contact
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 bg-theme-background p-10"
      >
        <div
          class="flex flex-col items-center justify-center"
          data-testid="contacts__banner"
        >
          <svg
            class="w-3/5 mb-8"
          >
            contacts-banner.svg
          </svg>
          <span>
            Add your most frequent contacts for fast, easy payments
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Contacts should render with contacts 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col -m-5 bg-theme-neutral-200 min-h-screen"
    data-testid="contacts"
  >
    <div
      class="flex items-center space-x-3 font-semibold p-10 text-theme-neutral-700"
      data-testid="breadcrumbs__wrapper"
    >
      <span>
         &lt;- 
      </span>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-700"
          href="/portfolio"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5"
    >
      <div
        class="bg-theme-background p-10"
      >
        <div
          class="flex items-center justify-between bg-theme-background"
        >
          <div
            class="flex flex-col items-start w-2/5"
          >
            <h1
              class="text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Contacts
            </h1>
            <div
              class="mt-2 text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Manage your frequent contacts
            </div>
          </div>
          <div
            class="w-3/5"
          >
            <div
              class="flex justify-end items-center space-x-5"
            >
              <button
                class="flex items-center my-auto font-semibold cursor-pointer text-theme-primary-200 space-x-3"
                data-testid="header-search-bar__button"
              >
                <span>
                  Search
                </span>
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    search.svg
                  </svg>
                </div>
              </button>
              <div
                class="h-12 my-auto border-l border-1 border-theme-primary-100"
              />
              <button
                class="sc-AxjAm ddQVWI whitespace-no-wrap"
                color="primary"
                data-testid="contacts__add-contact-btn"
                type="button"
              >
                Add Contact
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 bg-theme-background p-10"
      >
        <div
          class="w-full"
        >
          <div
            class="sc-fzoLsD khbsxi"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  pl-13"
                    >
                      <div
                        class="mr-1"
                      >
                        Nickname
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxirZ fttODj"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  justify-center"
                    >
                      <div
                        class="mr-1"
                      >
                        Network
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  pl-13"
                    >
                      <div
                        class="mr-1"
                      >
                        Address
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  justify-center"
                    >
                      <div
                        class="mr-1"
                      >
                        Account Type
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr>
                  <td
                    class="text-center "
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fzpans bVDTSU bg-theme-primary-600 border-theme-primary-600"
                      >
                        <span
                          class="text-sm text-theme-background"
                        >
                          OL
                        </span>
                      </div>
                      <span
                        class="font-semibold"
                      >
                        OLEBank
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-center "
                  >
                    <div
                      class="sc-fzpans bVDTSU border-ark-mainnet"
                    >
                      <div
                        class="sc-AxirZ iQaTP text-ark-mainnet"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fzpans cyrTyJ"
                      />
                      <div
                        class="inline-block truncate"
                      >
                        <span
                          class="text-theme-neutral-800 font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="text-center text-sm font-bold border-b border-dashed border-theme-neutral-200 space-x-2"
                  >
                    <span>
                      TODO
                    </span>
                  </td>
                  <td
                    class="border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right"
                      >
                        <button
                          class="sc-AxjAm kwTlRm"
                          color="primary"
                          type="button"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-center border-b border-dashed border-theme-neutral-200"
                  />
                  <td
                    class="text-center border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="sc-fzpans bVDTSU border-bitcoin-mainnet"
                    >
                      <div
                        class="sc-AxirZ iQaTP text-bitcoin-mainnet"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fzpans cyrTyJ"
                      />
                      <div
                        class="inline-block truncate"
                      >
                        <span
                          class="text-theme-neutral-800 font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          15pyr1HRAxpq3x64duXav1csmyCtXXu9G8
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="text-center text-sm font-bold border-b border-dashed border-theme-neutral-200 space-x-2"
                  >
                    <span>
                      TODO
                    </span>
                  </td>
                  <td
                    class="border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right"
                      >
                        <button
                          class="sc-AxjAm kwTlRm"
                          color="primary"
                          type="button"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
